# search_engine

./: CMakeLists.txt  LICENSE  README.md  answers.json  config.json  main.cpp  requests.json  search_engine.h
JsonFiles/: config.json
include/: InvertedIndex.h  JsonConverter.h  SearchServer.h
nlohmann json/: CMakeLists.txt  README.md  meson.build  nlohmann_json.natvis
nlohmann json/docs/mkdocs/docs/integration/: package_managers.md  pkg-config.md
nlohmann json/tools/generate_natvis/: generate_natvis.py
src/: InvertedIndex.cpp  JsonConverter.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  all_tests.cpp
